apps/sample-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web
  labels:
    app: sample-web
spec:
  type: ClusterIP
  selector:
    app: sample-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
